# deserialize

./: .gitignore  CHANGELOG.md  LICENSE  README.md  azure-pipelines.yml  pylintrc  pyproject.toml  requirements.txt  setup.py  stylecheck.sh  test.sh
.github/workflows/: ci.yml  codeql-analysis.yml
deserialize/: __init__.py  conversions.py  custom_deserializable.py  decorators.py  exceptions.py  field.py  metadata_cache.py  raw_storage_mode.py  type_checks.py
deserialize/decorators/: __init__.py  base.py  constructed.py  default.py  downcasting.py  ignore.py  key.py  parser.py  snake.py  unhandled.py
docs/: conf.py  custom_keys.rst  default_values.rst  downcasting.rst  ignored_keys.rst  index.rst  parsers.rst  post_processing.rst  raw_storage.rst  subclassing.rst  unhandled_fields.rst
tests/: test_39_generics.py  test_alternatives.py  test_annotation_styles.py  test_base_types.py  test_classvars.py  test_constructed.py  test_constructors.py  test_conversions.py  test_coverage_gaps.py  test_custom_deserializable.py  test_decorator_combinations.py  test_decorators.py  test_defaults.py  test_deserialize.py  test_deserialize_core.py  test_downcasting.py  test_edge_cases.py  test_enums.py  test_example.py  test_exceptions.py  test_field.py  test_field_annotations.py  test_ignore.py  test_inheritance.py  test_keys.py  test_metadata_cache.py  test_parser_subclassing.py  test_parsers.py  test_raw_storage.py  test_raw_storage_advanced.py  test_real_world_scenarios.py  test_sets.py  test_snakecase_conversion.py  test_subclassing.py  test_tuples.py  test_type_checks.py  test_types.py  test_unhandled.py  test_union.py  test_unions.py
