[tool.poetry]
name = "deserialize"
version = "2.0.0"
description = "A library to make deserialization easy."

license = "MIT"

authors = [
    "Dale Myers <dale@myers.io>"
]

readme = 'README.md'

repository = "https://github.com/dalemyers/deserialize"
homepage = "https://github.com/dalemyers/deserialize"

keywords = ['deserialization', 'deserialize', 'objects', 'object', 'json']

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.7.2"

[tool.poetry.dev-dependencies]
black = "=23.1.0"
mypy = "=1.0.1"
pylint = "=2.16.2"
pytest = "=7.2.1"
pytest-cov = "=4.0.0"
recommonmark = "=0.7.1"
sphinx = "^2.3"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
