[tool.poetry]
name = "deserialize"
version = "3.0.0"
description = "A library to make deserialization easy."

license = "MIT"

authors = ["Dale Myers <dale@myers.io>"]

readme = 'README.md'

repository = "https://github.com/dalemyers/deserialize"
homepage = "https://github.com/dalemyers/deserialize"

keywords = ['deserialization', 'deserialize', 'objects', 'object', 'json']

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "=25.1.0"
mypy = "=1.15.0"
pylint = "=3.3.5"
pytest = "=7.2.1"
pytest-cov = "=4.0.0"
recommonmark = "=0.7.1"
sphinx = "^2.3"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
