[tool.poetry]
name = "deserialize"
version = "2.2.0"
description = "A library to make deserialization easy."

license = "MIT"

authors = ["Dale Myers <dale@myers.io>"]

readme = 'README.md'

repository = "https://github.com/dalemyers/deserialize"
homepage = "https://github.com/dalemyers/deserialize"

keywords = ['deserialization', 'deserialize', 'objects', 'object', 'json']

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "=25.9.0"
mypy = "=1.18.2"
pylint = "=3.3.9"
pyright = "=1.1.406"
pytest = "=8.4.2"
pytest-cov = "=7.0.0"
recommonmark = "=0.7.1"
sphinx = "=7.4.7"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.pyright]
include = ["deserialize", "tests"]
exclude = ["**/__pycache__"]
defineConstant = { DEBUG = true }

reportMissingImports = "error"
reportMissingTypeStubs = true

typeCheckingMode = "strict"

pythonVersion = "3.10"

# Allow internal API functions (starting with _) to be used within the package
reportPrivateUsage = "none"

# Don't warn about internal functions not being accessed in their own modules
# (they're used from other modules within the package)
reportUnusedFunction = "none"
